fixes x-overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ Cream 			#eae0cc	(234,224,204)
 
 html {
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 
 html h1, html h2, html h3, html h4 {
@@ -85,6 +86,10 @@ header {
 }
 
 #home {
+	padding: 0;
+}
+
+#valignwrapper {
 	padding: 0;
 }
 
@@ -294,6 +299,8 @@ p {
 
 	#abs {
 		position: absolute;
+		padding: 0;
+		margin: 0px;
 	}
 
 	#valign {
@@ -330,7 +337,7 @@ p {
 
 	#valign {
 /*	position: absolute;*/
-	transform: translate(0,0%);
+	transform: translate(0%,0%);
 	/*background-color: rgb(61,0,91);*/
 	background-image: 
 	linear-gradient(to bottom, 
